--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="slider">
     </div>
     
-    <script src="js/jquery-3.3.1.slim.min.js" rel="js" type="text/javascript"></script>
+    <script src="js/jquery-3.3.1.min.js" rel="js" type="text/javascript"></script>
     <script src="js/scripts.js" rel="js" type="text/javascript"></script>
 </body>
 
